@@ -1,3 +1,7 @@
+2013-10-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_healpix.c: Fix healpix build on msvc. (#223)
+
 2013-10-01  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/epsg: Upgraded to EPSG 8.2.
